# aimw

./: Cargo.toml  README.md
aimw/: Cargo.toml
aimw/src/: client.rs  lib.rs
aimw/src/openai/: chat.rs
